--- a/19CafeApp/Base.lproj/Main.storyboard
+++ b/19CafeApp/Base.lproj/Main.storyboard
@@ -116,6 +116,13 @@
                                     <segue destination="AqA-Fw-INV" kind="show" id="D8L-IE-aeS"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFc-8u-T8D">
+                                <rect key="frame" x="58" y="202" width="227" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.96841138601303101" green="0.86114934737192617" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -137,10 +144,98 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JfJ-Pa-TbZ"/>
+                    <connections>
+                        <outlet property="welcomeLabel" destination="BFc-8u-T8D" id="yxf-8g-oxw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="763.768115942029" y="117.85714285714285"/>
+            <point key="canvasLocation" x="720" y="116.58767772511848"/>
+        </scene>
+        <!--Email Join View Controller-->
+        <scene sceneID="bfT-L1-13i">
+            <objects>
+                <viewController id="9xe-5i-Mv2" customClass="EmailJoinViewController" customModule="_9CafeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Uq-8R-pBD">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Take it conveniently" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPK-2N-kQL">
+                                <rect key="frame" x="58" y="244" width="274" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="274" id="LYu-fY-kiz"/>
+                                    <constraint firstAttribute="height" constant="27" id="iDp-8R-fKY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="21"/>
+                                <color key="textColor" red="0.0" green="0.1397709486" blue="0.96841138599999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kim's Coffee" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h0Y-cO-5ei">
+                                <rect key="frame" x="15" y="270" width="360" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="Ddc-qj-UyZ"/>
+                                    <constraint firstAttribute="width" constant="360" id="ytg-G6-hST"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="50"/>
+                                <color key="textColor" red="0.0" green="0.1397709486" blue="0.96841138599999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ah8-LG-Nbp">
+                                <rect key="frame" x="47" y="348" width="19" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vsi-Tt-Jbh">
+                                <rect key="frame" x="47" y="412" width="31" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="아이디를 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jaI-5m-r2i">
+                                <rect key="frame" x="47" y="370" width="314" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호를 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5X-Bn-shN">
+                                <rect key="frame" x="47" y="438" width="314" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5YP-fl-wom">
+                                <rect key="frame" x="148" y="508" width="94" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="회원가입">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="emailJoinButton:" destination="9xe-5i-Mv2" eventType="touchUpInside" id="2EJ-l2-hNk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7AW-8S-z7v"/>
+                        <color key="backgroundColor" red="0.96841138599999999" green="0.86114934740000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="PPK-2N-kQL" firstAttribute="centerX" secondItem="3Uq-8R-pBD" secondAttribute="centerX" id="1VM-4X-uv9"/>
+                            <constraint firstItem="h0Y-cO-5ei" firstAttribute="firstBaseline" secondItem="PPK-2N-kQL" secondAttribute="baseline" constant="52" symbolType="layoutAnchor" id="WUR-X2-uUF"/>
+                            <constraint firstItem="h0Y-cO-5ei" firstAttribute="centerX" secondItem="3Uq-8R-pBD" secondAttribute="centerX" id="b2W-ge-ua8"/>
+                            <constraint firstItem="h0Y-cO-5ei" firstAttribute="centerY" secondItem="3Uq-8R-pBD" secondAttribute="centerY" constant="-90" id="u9u-Ks-WL4"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JOE-oz-qzc"/>
+                    <connections>
+                        <outlet property="emailTextField" destination="jaI-5m-r2i" id="CXT-rM-zUh"/>
+                        <outlet property="passwordTextField" destination="A5X-Bn-shN" id="vlR-Xp-g3V"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UHX-Lo-RgK" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-109.23076923076923" y="804.73933649289097"/>
         </scene>
         <!--Menu1 View Controller-->
         <scene sceneID="i0E-w6-0cI">
@@ -597,13 +692,12 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="로그아웃">
+                                <buttonConfiguration key="configuration" style="plain" title="회원가입">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                     <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="googleLoginButtonTapped:" destination="BZh-Aj-Q3L" eventType="touchUpInside" id="3uh-lj-WQH"/>
-                                    <action selector="logoutButtonTapped:" destination="BZh-Aj-Q3L" eventType="touchUpInside" id="lD3-8P-13N"/>
+                                    <segue destination="9xe-5i-Mv2" kind="show" id="IIM-xK-fbp"/>
                                 </connections>
                             </button>
                         </subviews>
